--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,5 +10,6 @@
     "sourceType": "module"
   },
   "plugins": ["@typescript-eslint", "prettier"],
-  "rules": {}
+  "rules": {},
+  "ignorePatterns": ["dist"]
 }
