--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "ts-node-dev src/server.ts"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.31",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
@@ -19,7 +20,13 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
+    "prettier": "^2.6.2",
+    "prisma": "^3.13.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "@prisma/client": "^3.13.0",
+    "express": "^4.18.1"
   }
 }
