--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,9 @@
     "sourceType": "module"
   },
   "plugins": ["@typescript-eslint", "prettier"],
-  "rules": {},
+  "rules": {
+    "prettier/prettier": ["error"],
+    "no-useless-constructor": "off"
+  },
   "ignorePatterns": ["dist"]
 }
