--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,16 +3,17 @@
     "es2021": true,
     "node": true
   },
-  "extends": ["standard", "prettier"],
+  "extends": ["standard", "prettier", "plugin:jest/recommended", "plugin:jest/style"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": ["@typescript-eslint", "prettier", "jest"],
   "rules": {
     "prettier/prettier": ["error"],
-    "no-useless-constructor": "off"
+    "no-useless-constructor": "off",
+    "jest/expect-expect": "off"
   },
   "ignorePatterns": ["dist"]
 }
