--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@prisma/client": "^3.13.0",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
     "nodemailer": "^6.7.5"
   }
 }
